# text_recognizer

./: .gitignore  .gitmodules  CMakeLists.txt
img_generator/: CMakeLists.txt  main.cpp
recognizer/: CMakeLists.txt  main.cpp
str_generator/: CMakeLists.txt
